--- a/header.html
+++ b/header.html
@@ -1,10 +1,44 @@
 <!-- Black -->
 <div class="container-fluid  sec-menu-bgg">
   <div class="sec-space-left-right-nav">
+
     <nav class="navbar navbar-expand-xl navbar-dark">
       <div class="container-fluid  align-items-start">
         <a href="index.html" class="navbar-brand"><img class="img-fluid  sec-logo-img" src="images/main-logo.png"
             alt="logo"></a>
+        <!-- mobile -->
+        <div class="mobilesec">
+          <div class="herdericon  ">
+            <div class="wb-search-form d-flex align-items-center">
+              <div class="container">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="search-close-btn" id="closeBtn">
+                      <i class="far fa-times-circle" aria-hidden="true"></i></i>
+                    </div>
+                    <form action="#" method="GET">
+                      <input type="search" name="caviarSearch" id="search"
+                        placeholder="Search Your Desire Destinations">
+                      <input type="submit" class="d-none" value="submit">
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="wb-search-btn  calmenu">
+              <a href="#" id="search-btn"><i class="fa fa-search" aria-hidden="true"></i><span
+                  class="secdis">search</span></a>
+            </div>
+            <li class="nav-item calmenu">
+              <a class="nav-link " href="#"><i class="bi bi-person"></i></a>
+            </li>
+            <li class="nav-item calmenu">
+              <a class="nav-link " href="#"><i class="bi bi-cart"></i> <span>0</span> </a>
+            </li>
+
+          </div>
+        </div>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvas"
           aria-controls="navbarOffcanvas" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -37,6 +71,7 @@
               </ul>
 
             </div>
+            <div class="mobilesec2">
             <div class="herdericon">
               <div class="wb-search-form d-flex align-items-center">
                 <div class="container">
@@ -55,7 +90,8 @@
                 </div>
               </div>
               <div class="wb-search-btn  calmenu">
-                <a href="#" id="search-btn"><i class="fa fa-search" aria-hidden="true"></i><span class="secdis">search</span></a>
+                <a href="#" id="search-btn"><i class="fa fa-search" aria-hidden="true"></i><span
+                    class="secdis">search</span></a>
               </div>
               <li class="nav-item calmenu">
                 <a class="nav-link " href="#"><i class="bi bi-person"></i></a>
@@ -65,6 +101,7 @@
               </li>
 
             </div>
+          </div>
 
           </div>
         </div>
@@ -72,8 +109,3 @@
     </nav>
   </div>
 </div>
-
-
-
-
-
