--- a/header.html
+++ b/header.html
@@ -59,7 +59,7 @@
                   <a class="nav-link  headermenusec" href="#">CrossFit</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link  headermenusec" href="#"> Home Gym </a>
+                  <a class="nav-link  headermenusec" href="Product-detail-page.html"> Home Gym </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link  headermenusec" href="#"> Cardio</a>
