--- a/Categories.html
+++ b/Categories.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gibbon</title>
+    <title>Capital Fitness Making India a fitter place</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css'>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css'>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -18,48 +21,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <!-- owl carousel 2 effects animation- -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" rel="stylesheet" />
 
-    <!-- Oswald -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&family=Qwitcher+Grypen:wght@400;700&display=swap"
-        rel="stylesheet">
 
-    <!-- Montserrat Alternates -->
+    <!-- Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Qwitcher+Grypen:wght@400;700&display=swap"
-        rel="stylesheet">
-
-    <!-- Khand -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&family=Qwitcher+Grypen:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rosarivo:ital@0;1&display=swap"
         rel="stylesheet">
 
     <!-- Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Qwitcher+Grypen:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
-    <!-- tabber -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://md-aqil.github.io/images/swiper.min.css">
+    <!-- Oswald -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rosarivo:ital@0;1&display=swap"
+        rel="stylesheet">
 
-    <link rel="icon" href="images/logo.png">
+    <link rel="icon" href="images/main-logo.png">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
+
 
 <body>
     <div class="container-fluid p-0" id="innerpages">
@@ -71,7 +64,7 @@
     </div>
 
     <!-- filter -->
-    <div class="container-fluid">
+    <div class="container-fluid seccatepadd">
         <div class="row">
             <div class="col-lg-3">
                 <!-- filter-box -->
@@ -244,20 +237,23 @@
                 <div class="row">
                     <div class="col-6 col-lg-4">
                         <!-- product -->
-                        <div class="sec-all-pro" >
-                            <img class="img-fluid border p-3" src="images/cat-p1.png" alt="">
-                            <div class="row">
-                                <div class=" col-sm-9">
-                                    <h3 class="product-name">Creatine</h3>
-                                    <p class="product-des">1 Flavor | 83 Servings</p>
-                                    <p><span class="product-mrp">Rs. 1,200.00 </span><span
-                                            class="product-discount">Rs. 900.00</span></p>
-                                </div>
-                                <div class=" col-sm-3 sec-cart-main-box">
-                                    <div class="product-cart-icon">
-                                        <a class="prodict-icons" href="Product-detail-page.html">
-                                            <i class="fa-solid fa-bag-shopping"></i>
-                                        </a>
+                        <div class="sec-all-pro">
+                            <div class="secpriimg">
+                                <img class="img-fluid" src="images/slider-1.png" alt="">
+                            </div>
+                            <div class="secprodbg">
+                                <h3 class="product-name">7 FT OLYMPIC BAR WITH BEARING</h3>
+                                <div class="row m-0 secprodcart">
+                                    <div class=" col-sm-9">
+                                        <p><span class="product-mrp">Rs. 1,350.00 </span><span class="product-discount">Rs.
+                                                1,250.00</span></p>
+                                    </div>
+                                    <div class=" col-sm-3 sec-cart-main-box">
+                                        <div class="product-cart-icon">
+                                            <a class="prodict-icons" href="#">
+                                                <i class="fa-solid fa-bag-shopping"></i>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -265,20 +261,24 @@
                     </div>
                     <div class="col-6 col-lg-4">
                           <!-- product -->
-                          <div class="sec-all-pro" >
-                            <img class="img-fluid border p-3" src="images/cat-p2.png" alt="">
-                            <div class="row">
-                                <div class=" col-sm-9">
-                                    <h3 class="product-name">Creatine made with Creapure</h3>
-                                    <p class="product-des">1 Flavor | 66 Servings</p>
-                                    <p><span class="product-mrp">Rs. 2,000.00 </span><span
-                                            class="product-discount">Rs. 1,600.00</span></p>
-                                </div>
-                                <div class=" col-sm-3 sec-cart-main-box">
-                                    <div class="product-cart-icon">
-                                        <a class="prodict-icons" href="#">
-                                            <i class="fa-solid fa-bag-shopping"></i>
-                                        </a>
+                          <div class="sec-all-pro">
+                            <div class="secpriimg">
+                                <img class="img-fluid" src="images/slider-2.png" alt="">
+                            </div>
+                            <div class="secprodbg">
+                                <h3 class="product-name">Cast Iron Kettlebell
+                                    28kgx1</h3>
+                                <div class="row m-0 secprodcart">
+                                    <div class=" col-sm-9">
+                                        <p><span class="product-mrp">Rs. 5,600 </span><span class="product-discount">Rs.
+                                                4,200</span></p>
+                                    </div>
+                                    <div class=" col-sm-3 sec-cart-main-box">
+                                        <div class="product-cart-icon">
+                                            <a class="prodict-icons" href="#">
+                                                <i class="fa-solid fa-bag-shopping"></i>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -286,20 +286,24 @@
                     </div>
                     <div class="col-6 col-lg-4">
                           <!-- product -->
-                          <div class="sec-all-pro" >
-                            <img class="img-fluid border p-3" src="images/cat-p3.png" alt="">
-                            <div class="row">
-                                <div class=" col-sm-9">
-                                    <h3 class="product-name">Creatine 100gm</h3>
-                                    <p class="product-des">1 Flavor | 33 Servings</p>
-                                    <p><span class="product-mrp">Rs. 650.00 </span><span
-                                            class="product-discount">Rs. 490.00</span></p>
-                                </div>
-                                <div class=" col-sm-3 sec-cart-main-box">
-                                    <div class="product-cart-icon">
-                                        <a class="prodict-icons" href="#">
-                                            <i class="fa-solid fa-bag-shopping"></i>
-                                        </a>
+                          <div class="sec-all-pro">
+                            <div class="secpriimg">
+                                <img class="img-fluid" src="images/slider-3.png" alt="">
+                            </div>
+                            <div class="secprodbg">
+                                <h3 class="product-name">Bumper Plate 150kg Set
+                                    Without BAR</h3>
+                                <div class="row m-0 secprodcart">
+                                    <div class=" col-sm-9">
+                                        <p><span class="product-mrp">Rs. 27,000</span><span class="product-discount">Rs.
+                                                22,500</span></p>
+                                    </div>
+                                    <div class=" col-sm-3 sec-cart-main-box">
+                                        <div class="product-cart-icon">
+                                            <a class="prodict-icons" href="#">
+                                                <i class="fa-solid fa-bag-shopping"></i>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
