--- a/header.html
+++ b/header.html
@@ -56,7 +56,7 @@
                   <a class="nav-link  headermenusec" href="#">Free Weights </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link  headermenusec" href="#">CrossFit</a>
+                  <a class="nav-link  headermenusec" href="Categories.html">CrossFit</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link  headermenusec" href="Product-detail-page.html"> Home Gym </a>
