--- a/Categories.html
+++ b/Categories.html
@@ -81,70 +81,41 @@
                     <div class="accordion accordion-flush" id="accordionFlushExample">
 
                         <!-- Categories -->
+
+                        <h4 class="catgsec">Categories</h4>
                         <div class="accordion-item rounded-3 border-0 ">
                             <h2 class="accordion-header">
                                 <button class="accordion-button border-bottom collapsed fw-semibold" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false"
                                     aria-controls="flush-collapseOne">
-                                    Categories
+                                    Free Weights 
                                 </button>
                             </h2>
                             <div id="flush-collapseOne" class="accordion-collapse collapse show"
                                 data-bs-parent="#accordionFlushExample">
                                 <div class="accordion-body p-0">
                                     <div class="card-body p-0 collapse show" id="collapseExample1">
-                                        <ul class="list-group list-group-flush" style="height:300px;overflow:auto;">
+                                        <ul class="list-group list-group-flush" style="overflow:auto;">
                                             <li
                                                 class="list-group-item p-2 d-flex justify-content-between align-items-center">
                                                 <p class="filter-arr"><i class="fa-solid fa-angle-right"></i> <a
-                                                        href="#">Whey Proteins</a></p>
+                                                        href="#">Barbells</a></p>
                                             </li>
                                             <li
                                                 class="list-group-item p-2 d-flex justify-content-between align-items-center">
                                                 <p class="filter-arr"><i class="fa-solid fa-angle-right"></i> <a
-                                                        href="#">Creatine</a></p>
+                                                        href="#">Dumbbells</a></p>
                                             </li>
                                             <li
                                                 class="list-group-item p-2 d-flex justify-content-between align-items-center">
                                                 <p class="filter-arr"><i class="fa-solid fa-angle-right"></i> <a
-                                                        href="#">Fish Oil</a></p>
+                                                        href="#">Plates</a></p>
                                             </li>
                                             <li
                                                 class="list-group-item p-2 d-flex justify-content-between align-items-center">
                                                 <p class="filter-arr"><i class="fa-solid fa-angle-right"></i> <a
                                                         href="#">Bottles & Shakers</a></p>
                                             </li>
-                                            <li
-                                                class="list-group-item p-2 d-flex justify-content-between align-items-center">
-                                                <p class="filter-arr"><i class="fa-solid fa-angle-right"></i> <a
-                                                        href="#">Multivitamins - General</a></p>
-                                            </li>
-                                            <li
-                                                class="list-group-item p-2 d-flex justify-content-between align-items-center">
-                                                <p class="filter-arr"><i class="fa-solid fa-angle-right"></i> <a
-                                                        href="#">Mass Gainers</a></p>
-                                            </li>
-                                            <li
-                                                class="list-group-item p-2 d-flex justify-content-between align-items-center">
-                                                <p class="filter-arr"><i class="fa-solid fa-angle-right"></i> <a
-                                                        href="#">Pre-Workout</a></p>
-                                            </li>
-                                            <li
-                                                class="list-group-item p-2 d-flex justify-content-between align-items-center">
-                                                <p class="filter-arr"><i class="fa-solid fa-angle-right"></i> <a
-                                                        href="#">Gym Bags</a></p>
-                                            </li>
-                                            <li
-                                                class="list-group-item p-2 d-flex justify-content-between align-items-center">
-                                                <p class="filter-arr"><i class="fa-solid fa-angle-right"></i> <a
-                                                        href="#">Peanut Butter</a></p>
-                                            </li>
-                                            <li
-                                                class="list-group-item p-2 d-flex justify-content-between align-items-center">
-                                                <p class="filter-arr"><i class="fa-solid fa-angle-right"></i> <a
-                                                        href="#">Whey Protein Isolate</a></p>
-                                            </li>
-
                                         </ul>
                                     </div>
                                 </div>
@@ -156,7 +127,7 @@
                                 <button class="accordion-button border-bottom collapsed fw-semibold" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
                                     aria-controls="flush-collapseTwo">
-                                    Sort by
+                                    CrossFit
                                 </button>
                             </h2>
                             <div id="flush-collapseTwo" class="accordion-collapse collapse"
@@ -172,7 +143,7 @@
                                 <button class="accordion-button border-bottom collapsed fw-semibold" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
                                     aria-expanded="false" aria-controls="flush-collapseThree">
-                                    Discount
+                                    Home Gym
                                 </button>
                             </h2>
                             <div id="flush-collapseThree" class="accordion-collapse collapse"
@@ -188,7 +159,7 @@
                                 <button class="accordion-button border-bottom collapsed fw-semibold" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#flush-collapsefor"
                                     aria-expanded="false" aria-controls="flush-collapsefor">
-                                    Ratings
+                                    Commercial Gym
                                 </button>
                             </h2>
                             <div id="flush-collapsefor" class="accordion-collapse collapse"
@@ -204,7 +175,7 @@
                                 <button class="accordion-button border-bottom collapsed fw-semibold" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#flush-collapsefive"
                                     aria-expanded="false" aria-controls="flush-collapsefive">
-                                    Offers
+                                    Cardio
                                 </button>
                             </h2>
                             <div id="flush-collapsefive" class="accordion-collapse collapse"
@@ -220,7 +191,7 @@
                                 <button class="accordion-button border-bottom collapsed fw-semibold" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#flush-collapsesix"
                                     aria-expanded="false" aria-controls="flush-collapsesix">
-                                    Stock Availability
+                                    Accessories
                                 </button>
                             </h2>
                             <div id="flush-collapsesix" class="accordion-collapse collapse"
