--- a/header.html
+++ b/header.html
@@ -52,14 +52,25 @@
           <div class="offcanvas-body">
             <div class="navbar-nav justify-content-center align-items-center  flex-grow-1 pe-3">
               <ul class="navbar-nav   mb-2 mb-lg-0  ">
-                <li class="nav-item">
-                  <a class="nav-link  headermenusec" href="#">Free Weights </a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle headermenusec" href="#" id="navbarDropdown" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    Free Weights 
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Barbells</a></li>
+                    <li><a class="dropdown-item" href="#">Dumbbells</a></li>
+                    <li><a class="dropdown-item" href="#">Plates</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link  headermenusec" href="Categories.html">CrossFit</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link  headermenusec" href="Product-detail-page.html"> Home Gym </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link  headermenusec" href="#"> Commercial Gym </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link  headermenusec" href="#"> Cardio</a>
