--- a/footer.html
+++ b/footer.html
@@ -47,11 +47,11 @@
                     <h4 class="secquick">Information</h4>
                     <div class="sectextfoot">
                         <p><a href="#"><i class="bi bi-chevron-right"></i> About us</a></p>
-                        <p><a href="#"><i class="bi bi-chevron-right"></i> Privacy Policy</a></p>
-                        <p><a href="#"><i class="bi bi-chevron-right"></i> Payment Policy</a></p>
-                        <p><a href="#"><i class="bi bi-chevron-right"></i> Terms & Conditions </a></p>
-                        <p><a href="#"><i class="bi bi-chevron-right"></i> Replacement & Shipping Policy</a></p>
-                        <p><a href="#"><i class="bi bi-chevron-right"></i> Cancel Policy</a></p>
+                        <p><a href="Privacy-Policy.html"><i class="bi bi-chevron-right"></i> Privacy Policy</a></p>
+                        <p><a href="payment-policy.html"><i class="bi bi-chevron-right"></i> Payment Policy</a></p>
+                        <p><a href="terms&conditions.html"><i class="bi bi-chevron-right"></i> Terms & Conditions </a></p>
+                        <p><a href="replacement-&-shipping-policy.html"><i class="bi bi-chevron-right"></i> Replacement & Shipping Policy</a></p>
+                        <p><a href="cancel-policy.html"><i class="bi bi-chevron-right"></i> Cancel Policy</a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4">
