--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- header -->
         <div include-html="header.html" id="header-file"></div>
         <!-- hero -->
-        <div class="container">
+        <div class="container  secherocony">
             <div class="row m-0 m-0">
                 <div class="col-md-6">
                     <h1 class="secherotext">Elevate Your Fitness, Elevate Your Life!</h1>
@@ -76,11 +76,11 @@
 
     </div>
     <!-- tab -->
-    <div class="container-fluid sec-tab-bg">
+    <div class="container-fluid sec-tab-bg ">
         <h1>Its time to choice</h1>
     </div>
     <!-- tab2 -->
-    <div class="container-fluid sec-tab-bg2">
+    <div class="container-fluid sec-tab-bg2 ">
         <div class="card border-0 sec-tab-border-bg">
             <nav>
                 <div class="nav nav-tabs mb-3" id="nav-tab" role="tablist">
@@ -935,7 +935,7 @@
         </div>
     </div>
     <!-- Deals Of the Day -->
-    <div class="container-fluid pb-5 SECprod-day padd-mobile">
+    <div class="container-fluid pb-5 SECprod-day padd-mobile ">
         <h1 class="tittle-day"> <span>Deals</span> Of the Day</h1>
         <div class="row m-0">
             <div class="col-lg-6 day-bg">
@@ -1354,15 +1354,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
 
 
     <!-- footer -->
