--- a/replacement-&-shipping-policy.html
+++ b/replacement-&-shipping-policy.html
@@ -57,18 +57,66 @@
     <div class="container-fluid p-0" id="innerpages">
         <div include-html="header.html" id="header-file"></div>
     </div>
-
-<!-- allserves -->
- <div class="container secproduct text-center">
-    <img class="img-fluid" src="images/404image.png" alt="">
-    <div class="secreadbtn2">
-        <a href="index.html">GO TO HOMEPAGE <i class="fa-solid fa-arrow-right"></i></a>
+    <!-- headding -->
+    <div class="container-fluid  ">
+        <h1 class="tittle-day"> Replacement & Shipping</h1>
     </div>
- </div>
+
+    <div class="container secpeivtext pb-5">
+
+        <h5>Replacement & Shipping</h5>
+
+        <p> Replacement is acceptable only under the following conditions:</p>
+        <p> Manufacturing defect</p>
+        <p> Damaged at the time of delivery</p>
+        <p> Wrong goods delivered</p>
+        <p> Wrong Quantity</p>
+        <p> Replacement: If the goods delivered are damaged due to the above-mentioned points, the User can send
+            photographs of the goods on email id capitalfitnessindia@gmail.com within 48 hours of delivery. Only after
+            SF Healthtech’s team is satisfied replacement shall be made.</p>
+        <h5> Replacement can be refused if:</h5>
+        <p> a) Damages caused to the goods on account of negligence or improper usage on the part of the customer,</p>
+        <p> b) If it shows sign of wear and tear in any way,</p>
+        <p> c) Damages caused due to misuse of the goods.</p>
+        <p> Each item can only be exchanged once. No cash refunds are permitted.</p>
+        <p> Replacement will be initiated only upon receiving the goods. Please allow one to three weeks from the day we
+            receive the goods for your replacement request to be processed. You will be contacted once your replacement
+            is complete.</p>
+        <p> Please note that we do not offer exchanges or refunds on any sale goods.</p>
+        <p> If you have any questions or complaints regarding the goods, please email us at
+            capitalfitnessindia@gmail.com</p>
+        <p> After approval, the pickup of the goods will be arranged through our courier partners.</p>
+        <p> Please keep the goods ready with all tags & accessories. Kindly ensure proper packaging to avoid any damage
+            during transit.</p>
+        <p> Please take care of the following points, while packing your goods for Pickup -</p>
+        <p> The customer will bear the shipping charges for the return shipment</p>
+        <p> Should be packed properly to avoid any damage during transit</p>
+        <p> Goods should not be used/altered/ tampered</p>
+        <p> Keep original price tag & packing intact</p>
+        <p> Once verified by the Capital Fitness team the goods will be replaced and will be delivered back to you.</p>
+
+<p>Please note that replacement will depend upon the stock availability of goods. If replacement is not possible due to non-availability of stock then other goods of the same value will be delivered to you.</p>
+<h5>Shipping Policy</h5>
+<p>We ensure timely delivery of the goods. So once you have placed an order, be rest assured as we will look after everything. Also, timely delivery of the order is our utmost priority however, actual delivery depends upon the availability of the goods, your shipping address, etc. We have collaborated with top Courier to assure that you receive your order on time. If you have any questions during the process, feel free to reach our customer support.</p>
+<p>Purchases are shipped from our factory/warehouse in Delhi by courier. Please allow the following number of days from receipt of your order.</p>
+
+<h5>Delivery for Prepaid Orders:</h5>
+<p>1-2 working days for New Delhi .</p>
+<p>6-7days working days may be required for places outside New Delhi.</p>
 
 
-<!-- footer -->
+
+
+    </div>
+
+
+
+    <!-- footer -->
     <div include-html="footer.html" id="footer-file"></div>
+
+    <!-- tab -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -80,6 +128,29 @@
     <script src="js/owl.carousel.min.js" type="text/javascript"></script>
     <script src="js/include-html.min.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js'></script>
+    <!--tabber  -->
+    <script src="https://md-aqil.github.io/images/swiper.min.js"></script>
+    <script>
+
+        "use strict";
+
+        // search active code
+        $("#search-btn, #closeBtn").on("click", function () {
+            $("body").toggleClass("search-form-on");
+        });
+        // sticky active
+        var $window = $(window);
+        $window.on("scroll", function () {
+            if ($window.scrollTop() > 0) {
+                $("body").addClass("sticky");
+            } else {
+                $("body").removeClass("sticky");
+            }
+        });
+        (jQuery);
 
 
+    </script>
 </body>
+
+</html>
