--- a/404.html
+++ b/404.html
@@ -65,7 +65,16 @@
         <a href="index.html">GO TO HOMEPAGE <i class="fa-solid fa-arrow-right"></i></a>
     </div>
  </div>
-
+     <!-- whatsapp -->
+   
+     <div class="floating_btn">
+        <a target="_blank" href="https://wa.me/+919818812761">
+          <div class="contact_icon">
+            <i class="fa-brands fa-whatsapp "></i>
+          </div>
+        </a>
+        <p class="text_icon">Talk to us?</p>
+      </div> 
 
 <!-- footer -->
     <div include-html="footer.html" id="footer-file"></div>
