--- a/Categories.html
+++ b/Categories.html
@@ -62,6 +62,16 @@
     <div class="container-fluid pb-5 pt-5">
         <h1 class="tittle-day"> Its time to choice</h1>
     </div>
+         <!-- whatsapp -->
+   
+ <div class="floating_btn">
+    <a target="_blank" href="https://wa.me/+919818812761">
+      <div class="contact_icon">
+        <i class="fa-brands fa-whatsapp "></i>
+      </div>
+    </a>
+    <p class="text_icon">Talk to us?</p>
+  </div> 
 
     <!-- filter -->
     <div class="container-fluid seccatepadd">
