--- a/Product-detail-page.html
+++ b/Product-detail-page.html
@@ -57,6 +57,16 @@
     <div class="container-fluid p-0" id="innerpages">
         <div include-html="header.html" id="header-file"></div>
     </div>
+             <!-- whatsapp -->
+   
+ <div class="floating_btn">
+    <a target="_blank" href="https://wa.me/+919818812761">
+      <div class="contact_icon">
+        <i class="fa-brands fa-whatsapp "></i>
+      </div>
+    </a>
+    <p class="text_icon">Talk to us?</p>
+  </div> 
     <!-- dt -->
     <div class="container-fluid card-wrapper pt-5 pb-5">
 
