--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,7 @@
-    <!-- instagram -->
+
+   
+   
+   <!-- instagram -->
     <div class="container-fluid insta-bg">
         <div class="text-center">
             <img class="img-fluid" src="images/instagram.png" alt="">
@@ -34,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
-                    <p class="secfootlogodesktop"><a href="#"><img class="img-fluid" src="images/main-logo.png" alt=""></a></p>
+                    <p class="secfootlogodesktop"><a href="index.html"><img class="img-fluid" src="images/main-logo.png" alt=""></a></p>
                     <div class="socalmedia">
                         <p><a href="#"><i class="fa-brands fa-facebook-f"></i></a></p>
                         <p><a href="#"><i class="fa-brands fa-instagram"></i></a></p>
