--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
         </div>
 
     </div>
+     <!-- whatsapp -->
+   
+     <div class="floating_btn">
+        <a target="_blank" href="https://wa.me/+919818812761">
+          <div class="contact_icon">
+            <i class="fa-brands fa-whatsapp "></i>
+          </div>
+        </a>
+        <p class="text_icon">Talk to us?</p>
+      </div>   
     <!-- tab -->
     <div class="container-fluid sec-tab-bg ">
         <h1>Its time to choice</h1>
