--- a/payment-policy.html
+++ b/payment-policy.html
@@ -61,6 +61,17 @@
     <div class="container-fluid  ">
         <h1 class="tittle-day"> Payment Policy</h1>
     </div>
+  </div> 
+         <!-- whatsapp -->
+   
+         <div class="floating_btn">
+            <a target="_blank" href="https://wa.me/+919818812761">
+              <div class="contact_icon">
+                <i class="fa-brands fa-whatsapp "></i>
+              </div>
+            </a>
+            <p class="text_icon">Talk to us?</p>
+          </div> 
 
     <div class="container secpeivtext">
         <p>Who we are</p>
