--- a/replacement-&-shipping-policy.html
+++ b/replacement-&-shipping-policy.html
@@ -61,7 +61,16 @@
     <div class="container-fluid  ">
         <h1 class="tittle-day"> Replacement & Shipping</h1>
     </div>
-
+         <!-- whatsapp -->
+   
+         <div class="floating_btn">
+            <a target="_blank" href="https://wa.me/+919818812761">
+              <div class="contact_icon">
+                <i class="fa-brands fa-whatsapp "></i>
+              </div>
+            </a>
+            <p class="text_icon">Talk to us?</p>
+          </div> 
     <div class="container secpeivtext pb-5">
 
         <h5>Replacement & Shipping</h5>
