--- a/footer.html
+++ b/footer.html
@@ -49,7 +49,7 @@
                 <div class="col-lg-3 col-md-4">
                     <h4 class="secquick">Information</h4>
                     <div class="sectextfoot">
-                        <p><a href="#"><i class="bi bi-chevron-right"></i> About us</a></p>
+                        <p><a href="About-us.html"><i class="bi bi-chevron-right"></i> About us</a></p>
                         <p><a href="Privacy-Policy.html"><i class="bi bi-chevron-right"></i> Privacy Policy</a></p>
                         <p><a href="payment-policy.html"><i class="bi bi-chevron-right"></i> Payment Policy</a></p>
                         <p><a href="terms&conditions.html"><i class="bi bi-chevron-right"></i> Terms & Conditions </a></p>
@@ -66,7 +66,7 @@
                         <p><a href="#"><i class="bi bi-chevron-right"></i> Track Order</a></p>
                         <p><a href="#"><i class="bi bi-chevron-right"></i> Create Account</a></p>
                         <p><a href="#"><i class="bi bi-chevron-right"></i> Store</a></p>
-                        <p><a href="#"><i class="bi bi-chevron-right"></i> Contact Us</a></p>
+                        <p><a href="Contact.html"><i class="bi bi-chevron-right"></i> Contact Us</a></p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4">
