--- a/About-us.html
+++ b/About-us.html
@@ -58,9 +58,76 @@
         <div include-html="header.html" id="header-file"></div>
     </div>
 
-<div class="container-fluid">
+    <div class="container-fluid secaboutimgbg">
+        <h2 class="secabuttext">About Us</h2>
+    </div>
 
-</div>
+    <div class="container secpaddabot">
+        <div class="row">
+            <div class="col-lg-6">
+                <img class="img-fluid" src="images/about-img.png" alt="">
+            </div>
+            <div class="col-lg-6">
+                <div class="secabbtex">
+                    <h3>About Us</h3>
+                    <p>At Capital Fitness India, we understand your goal of having a sound mind and a healthy body. We
+                        offer the highest quality equipment, a vast array of styles, and excellent value so that your
+                        goal can easily become a reality.</p>
+                    <p>We are committed to providing you best in class premium fitness equipment and accessories at
+                        affordable prices. We are able to deliver world-class fitness equipment and accessories through
+                        our strong supply chain network and reliable logistic support.</p>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="container table-responsive pt-5">
+            <h4 class="secvisi">VISION- MAKING INDIA A FITTER PLACE</h4>
+            <table class="table table-bordered table-hover">
+                <thead class="thead-dark">
+                </thead>
+                <tbody>
+                    <tr class="onet">
+                        <td>Nature Of Business</td>
+                        <td>Manufacturer, Service Provider, Supplier, Trader and Wholesaler, Distributor</td>
+                    </tr>
+                    <tr>
+                        <td>Year of Establishment</td>
+                        <td>2019</td>
+                    </tr>
+                    <tr class="onet">
+                        <td>No. of Employees</td>
+                        <td>8</td>
+                    </tr>
+                    <tr>
+                        <td>Company Name</td>
+                        <td>CAPITAL FITNESS INDIA</td>
+                    </tr>
+                    <tr class="onet">
+                        <td>Current Account number</td>
+                        <td>061484100000081</td>
+                    </tr>
+                    <tr>
+                        <td>Bankers</td>
+                        <td>Yes Bank</td>
+                    </tr>
+                    <tr class="onet">
+                        <td>Branch</td>
+                        <td>Moti Nagar,New Delhi</td>
+                    </tr>
+                    <tr>
+                        <td>GST No</td>
+                        <td>07CAZPS4473C1Z3</td>
+                    </tr>
+                    <tr class="onet">
+                        <td>Company Ownership Type</td>
+                        <td>Proprietorship</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+    </div>
 
 
 
@@ -71,31 +138,30 @@
 
 
 
-    
 
 
 
     <!-- footer -->
     <div include-html="footer.html" id="footer-file"></div>
 
-   <!-- tab -->
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <!-- tab -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-       crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
-       integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-       crossorigin="anonymous"></script>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-   <script src="js/owl.carousel.min.js" type="text/javascript"></script>
-   <script src="js/include-html.min.js"></script>
-   <script src='https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js'></script>
-   <!--tabber  -->
-   <script src="https://md-aqil.github.io/images/swiper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/owl.carousel.min.js" type="text/javascript"></script>
+    <script src="js/include-html.min.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js'></script>
+    <!--tabber  -->
+    <script src="https://md-aqil.github.io/images/swiper.min.js"></script>
 
-   
+
 </body>
 
 </html>
