--- a/About-us.html
+++ b/About-us.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="container secpaddabot">
-        <div class="row">
+        <div class="row m-0">
             <div class="col-lg-6">
                 <img class="img-fluid" src="images/about-img.png" alt="">
             </div>
