--- a/index.html
+++ b/index.html
@@ -95,34 +95,43 @@
             <nav>
                 <div class="nav nav-tabs mb-3" id="nav-tab" role="tablist">
 
-                    <button class="nav-link active" id="nav-all-tab" data-bs-toggle="tab"
-                    data-bs-target="#nav-all" type="button" role="tab" aria-controls="nav-all"
-                    aria-selected="true">all</button>
-
-                    <button class="nav-link" id="nav-fat-tab" data-bs-toggle="tab" data-bs-target="#nav-fat"
-                    type="button" role="tab" aria-controls="nav-fat" aria-selected="false">
-                    Free Weight </button>
-
-                    <button class="nav-link" id="nav-muscle-tab" data-bs-toggle="tab"
-                    data-bs-target="#nav-muscle" type="button" role="tab" aria-controls="nav-muscle"
-                    aria-selected="false">CrossFit </button>
-
-                    <button class="nav-link" id="nav-wellness-tab" data-bs-toggle="tab"
-                    data-bs-target="#nav-wellness" type="button" role="tab" aria-controls="nav-wellness"
-                    aria-selected="false">Home Gym</button>
-
-                    <button class="nav-link" id="nav-pre-tab" data-bs-toggle="tab" data-bs-target="#nav-pre"
-                    type="button" role="tab" aria-controls="nav-pre" aria-selected="false">Commercial Gym
-                </button>
-
-                <button class="nav-link" id="nav-post-tab" data-bs-toggle="tab" data-bs-target="#nav-post"
-                type="button" role="tab" aria-controls="nav-post" aria-selected="false"> Cardio
-            </button>
-            <button class="nav-link" id="nav-protein-tab" data-bs-toggle="tab"
-            data-bs-target="#nav-protein" type="button" role="tab" aria-controls="nav-protein"
-            aria-selected="false">Accessories</button>
-
-
+                    <div class="owl-carousel owl-theme tabhome">
+                        <div class="item">
+                            <button class="nav-link active" id="nav-all-tab" data-bs-toggle="tab"
+                                data-bs-target="#nav-all" type="button" role="tab" aria-controls="nav-all"
+                                aria-selected="true">all</button>
+                        </div>
+                        <div class="item">
+                            <button class="nav-link" id="nav-fat-tab" data-bs-toggle="tab" data-bs-target="#nav-fat"
+                                type="button" role="tab" aria-controls="nav-fat" aria-selected="false">
+                                Free Weight </button>
+                        </div>
+                        <div class="item">
+                            <button class="nav-link" id="nav-muscle-tab" data-bs-toggle="tab"
+                                data-bs-target="#nav-muscle" type="button" role="tab" aria-controls="nav-muscle"
+                                aria-selected="false">CrossFit </button>
+                        </div>
+                        <div class="item">
+                            <button class="nav-link" id="nav-wellness-tab" data-bs-toggle="tab"
+                                data-bs-target="#nav-wellness" type="button" role="tab" aria-controls="nav-wellness"
+                                aria-selected="false">Home Gym</button>
+                        </div>
+                        <div class="item">
+                            <button class="nav-link" id="nav-pre-tab" data-bs-toggle="tab" data-bs-target="#nav-pre"
+                                type="button" role="tab" aria-controls="nav-pre" aria-selected="false">Commercial Gym
+                            </button>
+                        </div>
+                        <div class="item">
+                            <button class="nav-link" id="nav-post-tab" data-bs-toggle="tab" data-bs-target="#nav-post"
+                                type="button" role="tab" aria-controls="nav-post" aria-selected="false"> Cardio
+                            </button>
+                        </div>
+                        <div class="item">
+                            <button class="nav-link" id="nav-protein-tab" data-bs-toggle="tab"
+                                data-bs-target="#nav-protein" type="button" role="tab" aria-controls="nav-protein"
+                                aria-selected="false">Accessories</button>
+                        </div>
+                    </div>
 
                 </div>
             </nav>
@@ -1423,7 +1432,7 @@
             dots: false,
             responsive: {
                 0: {
-                    items: 2
+                    items: 3
                 },
                 600: {
                     items: 3
@@ -1444,7 +1453,7 @@
             dots: true,
             responsive: {
                 0: {
-                    items: 1
+                    items: 2
                 },
                 600: {
                     items: 2
